fixing layout and spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -92,7 +92,7 @@ a {
   margin-bottom: 0 !important;
 }
 .freeModeSwiper {
-  padding-bottom: 15px !important;
+  padding-bottom: 50px !important;
 }
 @media screen("lg") {
   .custom-border {
